# Shitty-PerfMon

./: .gitignore  README.md  pubspec.yaml
lib/: NativeLibWrapper.dart  WMIFuckerWrapper.dart  main.dart
lib/pages/: CPUInfoPage.dart  DiskInfoPage.dart  MemoryInfoPage.dart  ProcessPage.dart
natives/: CMakeLists.txt  DriveUsageInfo.cpp  WMIFucker.cpp
natives/Inc/: DriveUsageInfo.h  WMIFucker.h
test/: widget_test.dart
windows/: CMakeLists.txt
windows/WMIFucker/: WMIFucker.cpp  WMIFucker.h
windows/runner/: Runner.rc  main.cpp
